src/new-block/edit.scss
$font: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;

$color-blue: #3858E9;

@mixin text-truncate( $lines: 1 ) {
    display: -webkit-box;
    -webkit-line-clamp: $lines;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
}

.gravatar-block-text-truncate-2-lines {
    @include text-truncate( 2 );
}

.gravatar-block {
    font-family: $font;
    font-size: 14px;
    line-height: 1.5;
    padding: 24px;
    border: 1px solid $color-blue;
    box-sizing: border-box;

    > .block-editor-inner-blocks > .block-editor-block-list__layout {
        display: flex;
        flex-direction: column;
        gap: 16px;
    }

    h4,
    p {
        margin: 0;
    }

    h4 {
        font-family: inherit;
    }

    a {
        text-decoration: none;
    }
}

.gravatar-block-column {
    > .block-editor-inner-blocks > .block-editor-block-list__layout {
        display: flex;
    }

    &.gravatar-block-column--vertical-alignment > .block-editor-inner-blocks > .block-editor-block-list__layout {
        flex-direction: column;
    }

    &.gravatar-block-column--align-center > .block-editor-inner-blocks > .block-editor-block-list__layout {
        align-items: center;
    }

    &.gravatar-block-column--header > .block-editor-inner-blocks > .block-editor-block-list__layout {
        gap: 10px;
    }

    &.gravatar-block-column--footer > .block-editor-inner-blocks > .block-editor-block-list__layout {
        gap: 8px;
    }

    &.gravatar-block-column--comma-separated .gravatar-block-paragraph {
        display: flex;

        &:not(:first-of-type)::before {
            content: " · ";
            white-space: pre;
        }

        .gravatar-block-paragraph__text {
            @include text-truncate( 1 );
        }
    }
}

.gravatar-block-image {
    /* Fix the extra bottom padding issue. */
    display: flex;

    &.gravatar-block-image--avatar .gravatar-block-image__image {
        border-radius: 50%;
    }
}

.gravatar-block-name {
    word-break: break-word;

    .gravatar-block-name__text {
        font-size: 18px;
        line-height: normal;
        font-weight: 700;
    }
}

.gravatar-block-paragraph {
    word-break: break-word;
}

.gravatar-block-link {
    display: flex;
    align-items: center;
    gap: 4px;

    &.gravatar-block-link--align-right {
        margin-left: auto;
    }
}

